<resources>
    <string name="api_host">http://201.122.77.1:8085/api/json/</string>
    <string name="other_host">http://ubiquitous.csf.itesm.mx/~pddm-1018057/content/proyecto/</string>

    <string name="app_name">All Do Healthy</string>
    <string name="username_hint">User</string>
    <string name="login_button_text">Login</string>
    <string name="password_hint">Password</string>
    <string name="here"><u>here</u></string>
    <string name="msg_before_here">Forgot? Don\'t worry, press</string>
    <string name="msg_after_here">to recover it.</string>
    <string name="hyperlinkPrivacyPolicy"><u>Privacy Policy</u></string>
    <string name="ok">ok</string>
    <string name="privacyPolicyTitle">Privacy Policy</string>
    <string name="PrivacyPolicy">Inssoft Soluciones Java de México S. de R.L. Of C.V. Makes of its knowledge, of being responsible for the treatment and protection of its personal data according to the purposes agreed and offered by Inssoft to its Users, Clients, Allies, etc., and to the established by the Federal Law of Protection of Personal Data In possession of the Individuals, with address in, Av. Prolongación Paseo de la Reforma No. 115 Int 806-6, Colonia Paseo de las Lomas CP 01330, Álvaro Obregón Delegation, Mexico D.F. If you require more information, you can access our complete privacy notice, www.inssoftmx.com/asviso_privacidad.pdf or by going to our Comercial address, located in Florencia 65, Tercer Piso, Colonia Juarez, CP 06600, Cuauhtémoc Delegation, Mexico D.F.</string>
    <string name="forgottenPwdTitle">Forgot your Password?</string>
    <string name="forgotPasswordText">Please insert the email that you used during Sign Up, we\'ll send you a link to change it</string>

    <string name="dismiss">Back</string>
    <string name="accept">Accept</string>
    <string name="send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_logout">Logout</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="authenticate">Authenticating...</string>
    <string name="section02">My Results</string>
    <string name="section01">My Health</string>
    <string name="section03">My Tests</string>

    <string name="msg_wrong_user_password">Wrong User/Password</string>
    <string name="mustAcceptPP">You must accept the Privacy Policy</string>
    <string name="change_password_title">Change password</string>
    <string name="password_confirm_hint">Confirm Password</string>
    <string name="sentCodeHint">Sent Code</string>
    <string name="passwords_match_error">Passwords do not match</string>
    <string name="change_password_success">Your new password was set succesfully</string>
    <string name="change_password_fail">Error changing password, contact the admin</string>
    <string name="wrong_email">Wrong email</string>

    <string name="ubiquitous">Ubiquitous</string>

    <string name="pendingTest">PENDING</string>

    <string name="bmi">BMI</string>
    <string name="fat">Fat</string>
    <string name="muscle">Muscle</string>
    <string name="weight">Weight</string>

    <string name="since">since</string>


    <string-array name="months">
        <item>Y</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

</resources>
