<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPasswordText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="32dp" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/forgottenEmail"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordText"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:srcCompat="@android:drawable/ic_dialog_email"
        android:id="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/forgottenEmail"
        app:layout_constraintBottom_toBottomOf="@+id/forgottenEmail"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bttn_send_fgtPwd"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/space"
        app:layout_constraintTop_toTopOf="@+id/space" />

    <Button
        android:text="@string/dismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bttn_dismiss_fgtPwd"
        app:layout_constraintRight_toLeftOf="@+id/space"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@+id/space" />

    <Space
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/space"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/forgottenEmail" />
</android.support.constraint.ConstraintLayout>